# dynamo-job-status

./: LICENSE  README.md  pyproject.toml
src/dynamo_job_status/: __init__.py  dynamodb.py
src/dynamo_job_status.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_dynamodb.py
