[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamo_job_status"
version = "0.1.0"
description = "AWS DynamoDB utility functions with retry and error handling"
readme = "README.md"
authors = [
    {name = "Ahsan", email = "ahsanmuhammadakram1996@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "boto3>=1.24.0",
    "tenacity>=8.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ahsanMuh/dynamo-job-status"
"Bug Tracker" = "https://github.com/ahsanMuh/dynamo-job-status/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]